--- a/style.css
+++ b/style.css
@@ -1,11 +1,45 @@
 body {
     margin: 0;
+    text-align: center;
+    background-color: #0a9a82;
+}
+
+#mainContainer{
+    display: block;
+    position: relative;
+    top: 5vh;
 }
 
 .columns{
     display: inline-block;
     position: relative;
     width: 100px;
-    height: 500px;
-    background-color: #66B;
+    height: 650px;
+    margin-left: 10px;
+    background-color: #6666BB00;
 }
+
+.cells{
+    display: inline-block;
+    position: relative;
+    height: 90px;
+    width: 90px;
+    margin-top: 10px;
+    border-radius: 15%;
+    background-color: #0a9a82;
+    box-shadow: inset 10px 10px 22px #0ba78d,
+            inset -10px -10px 22px #08846f;
+}
+
+.cellsPoped{
+    display: inline-block;
+    position: relative;
+    height: 90px;
+    width: 90px;
+    margin-top: 10px;
+    border-radius: 15%;
+    background-color: #0a9a82;
+    box-shadow: inset 10px 10px 22px #08846f,
+            inset -10px -10px 22px #0ba78d;
+}
+/* dark 08846f && light 0ba78d
